--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "mysql2": "^2.1.0",
     "sequelize": "^6.3.4",
     "sequelize-cli": "^6.2.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.11"
   }
 }
